# VectorProject

./: CMakeLists.txt  task2.cpp  task3.cpp  tasks.h
src/: main.cpp  task1.cpp  task4.cpp  task5.cpp
